alignment correction on output css

--- a/Labs/Lab2/777/css/styles.css
+++ b/Labs/Lab2/777/css/styles.css
@@ -54,7 +54,7 @@
      position:absolute;
      text-align:center;
      top:450px;
-     left:4000px;
+     left:400px;
      font-family: 'Baloo Bhaijaan', cursive;
      font-size:1.5em;
      line-height: .7em;
